# kurado_music

./: index.css  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio_service/: mod.rs
src-tauri/src/cloud_api/: mod.rs  search.rs  search_fixer.rs
src/app/: reducer.js  store.js
src/components/: BottomPlayerController.jsx  SideMenu.jsx  TopBar.jsx
src/pages/: SearchPage.jsx
